--- a/backend/hotel/src/main/resources/public/index.html
+++ b/backend/hotel/src/main/resources/public/index.html
@@ -47,71 +47,68 @@
               type="image/x-icon" />
     </head>
 
-  <body class="bg-black">
-    <header class="header">
-      <div class="logo">
-        <a href="./index.html" class="white">Voyage Inn</a>
-      </div>
-      <ul>
-        <li>
-          <a href="./index.html" class="active link mr-2">Home</a>
-        </li>
-        <li>
-          <a href="./pages/overview/overview.html" class="link mr-2"
-            >Overview</a
-          >
-        </li>
-        <li>
-          <a href="./pages/offers/offers.html" class="link mr-2">Offers</a>
-        </li>
-        <li>
-          <a href="./pages/contact-us/contact-us.html" class="link mr-2"
-            >Contact us</a
-          >
-        </li>
-        <div class="flex-center">
-          <li>
-            <a href="./pages/signup/signup.html" class="link blue">Join</a>
-          </li>
-          <span style="color: white; margin: 0 4px">|</span>
-          <li>
-            <a href="./pages/signin/signin.html" class="link blue">Sign in</a>
-          </li>
-        </div>
-      </ul>
-    </header>
-    <main class="main">
-      <div class="section-1">
-        <div class="search-box">
-          <h3 class="h3 mb-1">Make a reservation</h3>
-          <div class="flex center between">
-            <div class="search-field">
-              <div
-                class="field-box left-border"
-                data-toggle="modal"
-                data-target="#destinationModal"
-              >
-                <img
-                  src="static/icons/destination.svg"
-                  alt="destination"
-                  class="icon"
-                />
-                <span>Destination</span>
-                <img
-                  src="static/icons/arrow-down.svg"
-                  alt="arrow"
-                  class="icon-2"
-                />
-              </div>
-              <div id="check-in" class="field-box">
-                <img
-                  src="static/icons/calendar.svg"
-                  alt="calendar"
-                  class="icon"
-                />
-                <div>
-                  <span
-                    style="
+    <body class="bg-black">
+        <header class="header">
+            <div class="logo">
+                <a href="./index.html"
+                   class="white">Voyage Inn</a>
+            </div>
+            <ul>
+                <li>
+                    <a href="./index.html"
+                       class="active link mr-2">Home</a>
+                </li>
+                <li>
+                    <a href="./pages/overview/overview.html"
+                       class="link mr-2">Overview</a>
+                </li>
+                <li>
+                    <a href="./pages/offers/offers.html"
+                       class="link mr-2">Offers</a>
+                </li>
+                <li>
+                    <a href="./pages/contact-us/contact-us.html"
+                       class="link mr-2">Contact us</a>
+                </li>
+                <div class="flex-center">
+                    <li>
+                        <a href="./pages/signup/signup.html"
+                           class="link blue">Join</a>
+                    </li>
+                    <span
+                          style="color: white; margin: 0 4px">|</span>
+                    <li>
+                        <a href="./pages/signin/signin.html"
+                           class="link blue">Sign in</a>
+                    </li>
+                </div>
+            </ul>
+        </header>
+        <main class="main">
+            <div class="section-1">
+                <div class="search-box">
+                    <h3 class="h3 mb-1">Make a reservation
+                    </h3>
+                    <div class="flex center between">
+                        <div class="search-field">
+                            <div class="field-box left-border"
+                                 data-toggle="modal"
+                                 data-target="#destinationModal">
+                                <img src="static/icons/destination.svg"
+                                     alt="destination"
+                                     class="icon" />
+                                <span>Destination</span>
+                                <img src="static/icons/arrow-down.svg"
+                                     alt="arrow"
+                                     class="icon-2" />
+                            </div>
+                            <div id="check-in"
+                                 class="field-box">
+                                <img src="static/icons/calendar.svg"
+                                     alt="calendar"
+                                     class="icon" />
+                                <div>
+                                    <span style="
                       display: inline-block;
                       margin-bottom: 2rem;
                       color: rgb(39, 38, 38);
@@ -155,16 +152,16 @@
                                 style="width: 15%; padding: 1rem">
                             Search
                         </button>
-                    </form>
+                        </form>
+                    </div>
+                    <p class="text-center">We're there when
+                        plans change</p>
                 </div>
-                <p class="text-center">We're there when
-                    plans change</p>
-            </div>
-            <div style="margin: 4rem 0">
-                <div class="container mt-3"
-                     style="display: grid; grid-template-columns: 10% 90%; grid-gap: 20px">
-                    <div class="bg-white text-black"
-                         style="
+                <div style="margin: 4rem 0">
+                    <div class="container mt-3"
+                         style="display: grid; grid-template-columns: 10% 90%; grid-gap: 20px">
+                        <div class="bg-white text-black"
+                             style="
               align-items: center;
               border-radius: 50%;
               display: flex;
@@ -176,34 +173,35 @@
               justify-content: center;
               width: 75px;
             ">
-                        1
+                            1
+                        </div>
+                        <div class="text-light"
+                             style="border-radius: 8px; grid-column: 2; grid-row: 1; width: 100%">
+                            <h2>Making change easier</h2>
+                            <p>
+                                Our bookings can be changed
+                                without charge and most
+                                rates
+                                are able to be canceled
+                                without penalty.
+                            </p>
+                        </div>
                     </div>
-                    <div class="text-light"
-                         style="border-radius: 8px; grid-column: 2; grid-row: 1; width: 100%">
-                        <h2>Making change easier</h2>
-                        <p>
-                            Our bookings can be changed
-                            without charge and most rates
-                            are able to be canceled without
-                            penalty.
-                        </p>
-                    </div>
-                </div>
-                <div class="container mt-3"
-                     style="display: grid; grid-template-columns: 90% 10%; grid-gap: 20px">
-                    <div class="text-light"
-                         style="border-radius: 8px; grid-column: 1; grid-row: 1; width: 100%">
-                        <h2>Your health, safety, and
-                            well-being</h2>
-                        <p>
-                            All our hotels are required to
-                            adhere to comprehensive
-                            health and safety procedures
-                            including all local laws.
-                        </p>
-                    </div>
-                    <div class="bg-white text-black"
-                         style="
+                    <div class="container mt-3"
+                         style="display: grid; grid-template-columns: 90% 10%; grid-gap: 20px">
+                        <div class="text-light"
+                             style="border-radius: 8px; grid-column: 1; grid-row: 1; width: 100%">
+                            <h2>Your health, safety, and
+                                well-being</h2>
+                            <p>
+                                All our hotels are required
+                                to adhere to comprehensive
+                                health and safety procedures
+                                including all local laws.
+                            </p>
+                        </div>
+                        <div class="bg-white text-black"
+                             style="
               align-items: center;
               border-radius: 50%;
               display: flex;
@@ -215,13 +213,13 @@
               justify-content: center;
               width: 75px;
             ">
-                        2
+                            2
+                        </div>
                     </div>
-                </div>
-                <div class="container mt-3"
-                     style="display: grid; grid-template-columns: 10% 90%; grid-gap: 20px">
-                    <div class="bg-white text-black"
-                         style="
+                    <div class="container mt-3"
+                         style="display: grid; grid-template-columns: 10% 90%; grid-gap: 20px">
+                        <div class="bg-white text-black"
+                             style="
               align-items: center;
               border-radius: 50%;
               display: flex;
@@ -233,19 +231,20 @@
               justify-content: center;
               width: 75px;
             ">
-                        3
-                    </div>
-                    <div class="text-light"
-                         style="border-radius: 8px; grid-column: 2; grid-row: 1; width: 100%">
-                        <h2>Flexible Plans</h2>
-                        <p>
-                            Flexible booking options help
-                            you amend your plans as things
-                            change.
-                        </p>
+                            3
+                        </div>
+                        <div class="text-light"
+                             style="border-radius: 8px; grid-column: 2; grid-row: 1; width: 100%">
+                            <h2>Flexible Plans</h2>
+                            <p>
+                                Flexible booking options
+                                help you amend your plans as
+                                things
+                                change.
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
         </main>
 
         <div class="modal fade"
