--- a/backend/hotel/src/main/resources/public/index.html
+++ b/backend/hotel/src/main/resources/public/index.html
@@ -7,11 +7,6 @@
               content="IE=edge" />
         <meta name="viewport"
               content="width=device-width, initial-scale=1.0" />
-        <!-- <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-        crossorigin="anonymous" /> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
                 crossorigin="anonymous"></script>
@@ -84,12 +79,13 @@
                 </div>
             </ul>
         </header>
+
         <main class="main">
             <div class="section-1">
                 <div class="search-box">
                     <h3 class="h3 mb-1">Make a reservation
                     </h3>
-                    <div class="flex center between">
+                    <form class="flex center between">
                         <div class="search-field">
                             <div class="field-box left-border"
                                  data-toggle="modal"
@@ -109,11 +105,11 @@
                                      class="icon" />
                                 <div>
                                     <span style="
-                      display: inline-block;
-                      margin-bottom: 2rem;
-                      color: rgb(39, 38, 38);
-                      font-weight: 700;
-                    ">Check-in</span>
+                                        display: inline-block;
+                                        margin-bottom: 2rem;
+                                        color: rgb(39, 38, 38);
+                                        font-weight: 700;
+                                        ">Check-in</span>
                                     <input type="text"
                                            class="hided-input"
                                            placeholder="MM/DD/YYYY" />
@@ -126,11 +122,11 @@
                                      class="icon" />
                                 <div>
                                     <span style="
-                      display: inline-block;
-                      margin-bottom: 2rem;
-                      color: rgb(39, 38, 38);
-                      font-weight: 700;
-                    ">Check-out</span>
+                                        display: inline-block;
+                                        margin-bottom: 2rem;
+                                        color: rgb(39, 38, 38);
+                                        font-weight: 700;
+                                        ">Check-out</span>
                                     <input type="text"
                                            class="hided-input"
                                            placeholder="MM/DD/YYYY" />
@@ -152,8 +148,7 @@
                                 style="width: 15%; padding: 1rem">
                             Search
                         </button>
-                        </form>
-                    </div>
+                    </form>
                     <p class="text-center">We're there when
                         plans change</p>
                 </div>
