--- a/backend/hotel/src/main/resources/public/pages/contact-us/contact-us.html
+++ b/backend/hotel/src/main/resources/public/pages/contact-us/contact-us.html
@@ -56,11 +56,13 @@
       type="image/x-icon"
     />
   </head>
-
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap');
+    </style>
   <body class="bg-black">
     <header class="header">
       <div class="logo">
-        <a href="../../index.html" class="white">Voyage Inn</a>
+        <a href="../../index.html" style=" font-family: 'Playfair Display', serif;" class="white">Voyage Inn</a>
       </div>
       <ul>
         <li>
