--- a/backend/hotel/src/main/resources/public/pages/search/search.html
+++ b/backend/hotel/src/main/resources/public/pages/search/search.html
@@ -83,8 +83,29 @@
         </header>
 
         <main class="main">
-            <h2>Search results</h2>
-            
+            <div class="container">
+                <h1 class="white mt-4">Search results</h1>
+                <div class="card my-3"
+                     style="border-radius: 8px !important; grid-column: 1; grid-row: 1">
+                    <div class="card-body"
+                         style="display: grid; grid-template-columns: 33% 50% 17%;">
+                        <img style="grid-column: 1; grid-row: 1/4; width: 90%;"
+                             src="../../static/images/Одноместный номер СПА-отель Мелоот 1 1 (1).png"
+                             alt="Single room" />
+                        <h2 style="grid-column: 2; grid-row: 1;"
+                            class="card-title">"Single",
+                            "Room number", "Floor"</h2>
+                        <p style="grid-column: 2; grid-row: 2;"
+                           class="card-text">
+                            Other info, size, furniture,
+                            etc.
+                        </p>
+                        <button style="grid-column: 3; grid-row: 3; width: 70px;"
+                                class="btn btn-secondary">View</button>
+                    </div>
+                </div>
+            </div>
+
         </main>
     </body>
 
